# qa_guru_python_10_20

./: .env.example  README.md  pyproject.toml
demowebshop_tests/: application.py
demowebshop_tests/api/: BoardApi.py  board_api.py
demowebshop_tests/pages/: MainPage.py  main_page.py
tests/: conftest.py  test_auth.py  test_demowebshop.py
utils/: helper.py  logger.py
